provisioning/argocd/infrastructure/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes: { namespaces: { from: All } }
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes: { namespaces: { from: All } }
      tls:
        mode: Terminate
        certificateRefs:
          - name: www-tls
            namespace: www
